# grocery-shopping-assistant

./: README.md
Client/: README.md
Server/: README.md  app-bak.js  app-bak2.js  app.js  index.html  package.json
Server/Backups/: app_pc.js
Server/Backups/FeatureMatching/: CMakeCache.txt  FeatureMatching  Makefile  cmake_install.cmake  main.cpp
Server/Backups/FeatureMatching2/: CMakeCache.txt  FeatureMatching  Makefile  cmake_install.cmake  main.cpp
Server/Backups/FeatureMatching_Many/: CMakeCache.txt  FeatureMatching  Makefile  cmake_install.cmake  main.cpp
Server/Backups/NFT/: CMakeCache.txt  Makefile  (+4 more)
Server/FeatureMatching/: CMakeCache.txt  FeatureMatching  Makefile  SURF_FlannMatcher.cpp  cmake_install.cmake  main.cpp
Server/FeatureMatching_new/: CMakeCache.txt  FeatureMatching  Makefile  cmake_install.cmake  main-bak.cpp  main.cpp
Server/NFT/: CMakeCache.txt  Makefile  cmake_install.cmake
Server/NFT_WebOCR/: ocrWebService_license.txt
Server/NFT_new/: CMakeCache.txt  CMakeLists.txt  Makefile  NFT  cmake_install.cmake  main.cpp
Server/StringMatching/: main  main.cpp
Server/opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  NFT  cmake_install.cmake  main-backup.cpp  main.cpp
Server/opencv/GroceryClassifier_OneVsAll/: CMakeLists.txt  main.cpp
Server/opencv/GroceryClassifier_OneVsAll/YAML/: histogram_0.yml  histogram_1.yml  histogram_2.yml  histogram_3.yml  labels_3.yml  vocabulary.yml
Server/productPicUploads/: README.md
Server/tempProductPicUploads/: README.md
Server/uploads/: README.md
client/app/: build.gradle  proguard-rules.pro
(+156 files in other folders)
